--- a/email_management/email_service/templates/email_service/main.html
+++ b/email_management/email_service/templates/email_service/main.html
@@ -4,11 +4,10 @@
     <title>Главная</title>
 </head>
 <body>
-    <nav>
-        <a href="{% url 'email_list' %}">Список рассылок</a>
-        <a href="{% url 'email_new' %}">Создать рассылку</a>
-    </nav>
-    <h1>Добро пожаловать на нашу почту!</h1>
-    <p>Здесь вы можете просматривать, создавать и управлять своими рассылками.</p>
+<nav>
+    {% include 'navbar.html' %}
+</nav>
+<h1>Добро пожаловать на наше веб-приложение для рассылки писем!</h1>
+<p>Здесь вы можете просматривать, создавать и управлять своими рассылками.</p>
 </body>
 </html>
