--- a/email_management/email_service/templates/email_service/email_list.html
+++ b/email_management/email_service/templates/email_service/email_list.html
@@ -5,8 +5,7 @@
 </head>
 <body>
     <nav>
-        <a href="{% url 'email_list' %}">Список рассылок</a>
-        <a href="{% url 'email_new' %}">Создать рассылку</a>
+        {% include 'navbar.html' %}
     </nav>
     <h1>Список рассылок</h1>
     <ul>
